[gd_scene load_steps=8 format=2]

[ext_resource path="res://scenes/objects/destroyable_block/block_sprites.tres" type="SpriteFrames" id=1]
[ext_resource path="res://sprites/block.png" type="Texture" id=2]
[ext_resource path="res://scenes/objects/destroyable_block/DestroyableBlock.gd" type="Script" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 8, 8 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 8, 8 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 8, 0.5 )

[sub_resource type="Animation" id=4]
resource_name = "fade"
length = 3.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Overlay:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.6 ),
"transitions": PoolRealArray( 0.189464, 0.189464 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0.866667 ), Color( 1, 1, 1, 0.0862745 ) ]
}

[node name="DestroyableBlock" type="StaticBody2D"]
collision_layer = 524288
collision_mask = 0
script = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 8, 8 )
shape = SubResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 8, 8 )
frames = ExtResource( 1 )
animation = "beam"
playing = true

[node name="Overlay" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0.864658 )
light_mask = 2
texture = ExtResource( 2 )
offset = Vector2( 8, 8 )

[node name="WeaponCollisionArea" type="Area2D" parent="."]
position = Vector2( 8, 8 )
input_pickable = false
gravity = 0.0
linear_damp = 0.0
angular_damp = 0.0
priority = 128.0
collision_layer = 524288
collision_mask = 10

[node name="CollisionShape2D" type="CollisionShape2D" parent="WeaponCollisionArea"]
visible = false
shape = SubResource( 2 )

[node name="SamusCheckArea" type="Area2D" parent="."]
position = Vector2( 8, 8 )
input_pickable = false
gravity = 0.0
linear_damp = 0.0
angular_damp = 0.0
priority = 128.0
monitorable = false
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="SamusCheckArea"]
visible = false
shape = SubResource( 2 )

[node name="CrumbleArea" type="Area2D" parent="."]
monitorable = false
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="CrumbleArea"]
visible = false
position = Vector2( 8, -0.5 )
shape = SubResource( 3 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "fade"
anims/fade = SubResource( 4 )

[connection signal="body_entered" from="CrumbleArea" to="." method="_on_CrumbleArea_body_entered"]
